# ssnr_sim

./: .gitignore  MUJOCO_LOG.TXT  README.md  info_for_ide_users.txt  load_model.py  model.xml  pyproject.toml  ssnr_environment.yml
RL/: cartpole.py  cartpole_solution.py  learn.py  learn_cartpole.py  learn_myosuite.py  train_with_mjx.ipynb  visualise.py  visualise_elbow.py
RL/myochallenge/: ping_pong_IK.py  ping_pong_env.py
SSNR2026/: 01_pd_joint_space.py  02_pd_task_space.py  03_pd_tendon_space.py  04_pd_muscle_space.py  arm_model.xml  arm_model_tendon.xml  common_scripts.py  student_functions.py
SSNR2026/solutions/: 02_pd_task_space.py  05_pd_tendon_space_task_impedance.py  05_pd_tendon_space_task_stiffness.py  06_pd_muscle_space.py
challenges/Day_2/arm_control/: control_loop_passive.py
challenges/Day_2/arm_design/: solution.xml  solution_scene_wall.xml  solution_wall.xml
challenges/Day_2/elbow/: assets.xml  compose_model.py  (+1 more)
inverse_kinematics/: 01_pd_joint_space.py  04_pd_tendon_space.py  05_pd_tendon_space_task_stiffness.py  06_pd_muscle_space.py  06_pd_muscle_space2.py  MUJOCO_LOG.TXT  arm_model.xml  arm_model_tendon.xml  pd_joint_space.py  pd_muscle_space.py  pd_task_space.py  pd_tendon_space.py  pd_tendon_space_task_stiffness.py
welcome_scene/: hello_ssnr.py  humanoid_body.xml  letters.xml  welcome.xml
welcome_scene/meshes/: Text.001.stl  Text.002.stl  Text.003.stl  Text.004.stl  Text.005.stl  Text.006.stl  Text.007.stl  Text.008.stl
xml/: 01_planar_arm.xml  03_muscle_actuation.xml  05_nonlinear_sensing.xml  cmu_model.xml  tendon.xml
(+42 files in other folders)
